@@ -1,3 +1,11 @@
+2013-01-07  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclOOStubLib.c: Restrict the stub library to only use
+	* generic/tclTomMathStubLib.c: Tcl_PkgRequireEx, Tcl_ResetResult
+	and Tcl_AppendResult, not any other function. This puts least
+	restrictions on eventual Tcl 9 stubs re-organization, and it
+	works on the widest range of Tcl versions.
+
 2013-01-06  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* library/http/http.tcl: Don't depend on Spencer-specific regexp
